--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   background: linear-gradient(90deg, #ffefba, #fff);
   margin: 0;
   height: 100vh;
+  margin-bottom: 120px;
 }
 
 .inner-column {
